fixed overflow

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -83,12 +83,12 @@ p {
 
 
 /********** Extra Large devices only **********/
-@media (min-width: 1200px) {
+/*@media (min-width: 1200px) {
   }
   .navbar-left {
     float: left !important;
   }
-}
+}*/
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-12 {
